--- a/Source/ColorsMagic/ColorsMagic.WP/ColorsMagic.WP.csproj
+++ b/Source/ColorsMagic/ColorsMagic.WP/ColorsMagic.WP.csproj
@@ -82,14 +82,10 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Common\Logger.cs" />
     <Compile Include="Common\NavigationService.cs" />
     <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="Common\TaskCommand.cs" />
     <Compile Include="Common\TaskHelpers.cs" />
-    <Compile Include="GameModel\GamePosition.cs" />
-    <Compile Include="GameModel\PositionHelper.cs" />
-    <Compile Include="GameModel\TrianglePosition.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -154,6 +150,12 @@
     <SDKReference Include="BehaviorsXamlSDKManaged, Version=12.0">
       <Name>Behaviors SDK %28XAML%29</Name>
     </SDKReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ColorsMagic.Common\ColorsMagic.Common.csproj">
+      <Project>{F3F99453-65B8-468E-9F9F-223180C82117}</Project>
+      <Name>ColorsMagic.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
