--- a/Source/ColorsMagic/ColorsMagic.Common/packages.config
+++ b/Source/ColorsMagic/ColorsMagic.Common/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="JetBrains.Annotations" version="9.2.0" targetFramework="portable46-net451+win81+wpa81" />
+  <package id="JetBrains.Annotations" version="10.0.0" targetFramework="portable46-net451+win81+wpa81" />
+  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="portable46-net451+win81+wpa81" />
 </packages>
