--- a/Source/ColorsMagic/ColorsMagic.Tests/ColorsMagic.Tests.csproj
+++ b/Source/ColorsMagic/ColorsMagic.Tests/ColorsMagic.Tests.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GridGeneratorTest.cs" />
     <Compile Include="PositionHelperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
