--- a/Source/ColorsMagic/ColorsMagic.Tests/packages.config
+++ b/Source/ColorsMagic/ColorsMagic.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CheckContracts" version="1.4.3.0" targetFramework="net452" />
   <package id="JetBrains.Annotations" version="10.0.0" targetFramework="net452" />
   <package id="NUnit" version="2.6.4" targetFramework="net452" />
   <package id="Shouldly" version="2.6.0" targetFramework="net452" />
