--- a/Source/ColorsMagic/ColorsMagic.Tests/ColorsMagic.Tests.csproj
+++ b/Source/ColorsMagic/ColorsMagic.Tests/ColorsMagic.Tests.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ColorsMagic.Tests</RootNamespace>
     <AssemblyName>ColorsMagic.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CheckContracts, Version=1.4.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CheckContracts.1.4.3.0\lib\portable-net4+sl4+wp7+win8\CheckContracts.dll</HintPath>
+    <Reference Include="CheckContracts, Version=1.4.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CheckContracts.1.4.4.0\lib\portable-net4+sl4+wp7+win8\CheckContracts.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="JetBrains.Annotations, Version=10.0.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
