Move models to portable project

--- a/Source/ColorsMagic/ColorsMagic.WP/ColorsMagic.WP.csproj
+++ b/Source/ColorsMagic/ColorsMagic.WP/ColorsMagic.WP.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="Common\TaskCommand.cs" />
     <Compile Include="Common\TaskHelpers.cs" />
+    <Compile Include="GameColorExtensions.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -96,7 +97,6 @@
       <DependentUpon>AboutView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Screens\AboutViewModel.cs" />
-    <Compile Include="Screens\GameColorViewModel.cs" />
     <Compile Include="Screens\GameView.xaml.cs">
       <DependentUpon>GameView.xaml</DependentUpon>
     </Compile>
@@ -113,7 +113,6 @@
     </Compile>
     <Compile Include="Screens\MainMenuViewModel.cs" />
     <Compile Include="Screens\ViewModels.cs" />
-    <Compile Include="Settings\GameColor.cs" />
     <Compile Include="Settings\GameData.cs" />
     <Compile Include="Settings\GameLevel.cs" />
     <Compile Include="Settings\ProgramData.cs" />
