--- a/Source/ColorsMagic/ColorsMagic.Common/packages.config
+++ b/Source/ColorsMagic/ColorsMagic.Common/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="CheckContracts" version="1.4.4.0" targetFramework="portable46-net451+win81+wpa81" />
   <package id="JetBrains.Annotations" version="10.0.0" targetFramework="portable46-net451+win81+wpa81" />
+  <package id="ResharperCodeContractNullability" version="1.0.4" targetFramework="portable46-net451+win81+wpa81" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="portable46-net451+win81+wpa81" />
 </packages>
