move models to portable library

--- a/Source/ColorsMagic/ColorsMagic.Common/ColorsMagic.Common.csproj
+++ b/Source/ColorsMagic/ColorsMagic.Common/ColorsMagic.Common.csproj
@@ -34,9 +34,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="GameModel\CellsGraph.cs" />
     <Compile Include="GameModel\DragAndDropManager.cs" />
     <Compile Include="GameModel\GameColor.cs" />
     <Compile Include="GameModel\GameColorViewModel.cs" />
+    <Compile Include="GameModel\GameData.cs" />
+    <Compile Include="GameModel\GameLevel.cs" />
     <Compile Include="GameModel\GamePosition.cs" />
     <Compile Include="GameModel\GridGenerator.cs" />
     <Compile Include="GameModel\PortablePoint.cs" />
